--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,10 @@
 	<artifactId>Taller4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Taller4</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 	
 </project>
